--- a/index.html
+++ b/index.html
@@ -1,2 +1,133 @@
+<!doctype html>
 <html lang="en-us">
+<head>
+  <meta charset="UTF-8">
+  <meta name ="viewport" content="width-device-width, initial-scale=1.0">
+  <title>Bistro Miller</title>
+  <link rel="stylesheet" href="css/main.css">
+</head>
+<body>
+<div id="logo">
+  <h1>Bistro Miller</h1>
+  <p id="inPageNav">
+    <a href="#mains">Mains | </a>
+    <a href="#soups">Soups| </a>
+    <a href="#dessert">Dessert | </a>
+    <a href="#cheese">Cheese</a>
+  </p>
+</div><!-- end logo div -->
+
+<div id="menu">
+  <div class="stack">
+    <div class="food" id="openers">
+      <h2>Openers</h2>
+      <article>
+      <span class="base">Rare Seared Ahi</span><span class="price">14</span>
+      <p>w/ Sesame Oil & Horse Radish Aioli</p>
+      </article>
+      <article>
+      <span class="base">Avocado Sliced Thin</span><span class="price">12</span>
+      <p>w/ Himalayan black salt & Olive Oil</p>
+      </article>
+      <article>
+      <span class="base">Chilled Fruit Medley (Seasonal)</span><span class="price">12</span>
+      <p>w/ Mint & Toasted Almonds</p>
+      </article>
+      <article>
+      <span class="base">Caprese Salad</span><span class="price">12</span>
+      <p>w/ Buffalo Mozzarella & Heirloom Tomato</p>
+      </article>
+      <article>
+      <span class="base">Seared Sea Scallops</span><span class="price">14</span>
+      <p>w/ Lemongrass Cream & Pear</p>
+      </article>
+      <article>
+      <span class="base">Prince Edward Island Mussels</span><span class="price">14</span>
+      <p>w/ Butter, Wine, Parsley, Garlic, Shallot, tomato</p>
+      </article>
+      <article>
+      <span class="base">Watermelon Salad</span><span class="price">12</span>
+      <p>w/ Blue Cheese, Onion, Arugula, Mint, Salt, Pecans</p>
+      </article>
+      <article>
+      <span class="base">Summer Squash</span><span class="price">12</span>
+      <p>(Savory or Sweet)</p>
+      </article>
+      <article>
+      <span class="base">Shrimp Cocktail </span><span class="price">14</span>
+      </article>
+    </div> <!-- end Openers -->
+  </div><!-- end stack one -->
+
+  <div class="stack">
+    <div class="food" id="soups">
+      <h2>Soups</h2>
+      <article>
+      <span class="base">Squash Bisque</span><span class="price">9</span>
+      <p>w/ Lavender</p>
+      </article>
+      <article>
+      <span class="base">Herb & Garlic</span><span class="price">9</span>
+      </article>
+    </div> <!-- end soups -->
+
+    <div class="food" id="mains">
+      <h2>Mains</h2>
+      <article>
+      <span class="base">Chicken Piccata</span><span class="price">18</span>
+      <p>Traditionally Prepared</p>
+      </article>
+      <article>
+      <span class="base">Chicken Marsala</span><span class="price">20</span>
+      <p>w/ Cream Sauce & Wild Mushrooms</p>
+      </article>
+      <article>
+      <span class="base">Filet of Beouf</span><span class="price">35</span>
+      <p>w/ Béarnaise or Blue Cheese Cream</p>
+      </article>
+      <article>
+      <span class="base">Lamb Chops Scottadito</span><span class="price">35</span>
+      <p>w/ Charred Cherry Tomato & Fresh Mint</p>
+      </article>
+      <article>
+      <span class="base">Butter Poached Maine Lobster Tail</span><span class="price">40</span>
+      <p>Finished w/ Black Truffle Oil</p>
+      </article>
+      <article>
+      <span class="base">Penne Ala Vodka</span><span class="price">28</span>
+      <p>w/ Smoked Nova Scotia Salmon, Caviar, Cream & Chilled Stolichnaya </p>
+      </article>
+      <article>
+      <span class="base">Ratatouille</span><span class="price">15</span>
+      <p>Traditionally prepared</p>
+      </article>
+    </div><!--end mains-->
+  </div><!-- end stack two -->
+
+  <div class="stack">
+    <div class="food" id="dessert">
+      <h2>Dessert</h2>
+      <article>
+      <span class="base">Fresh Berries in Lavender Cream or Romanoff</span><span class="price">9</span>
+      <p></p>
+      </article>
+      <article>
+      <span class="base">Reine de Saba Cake</span><span class="price">9</span>
+      <p></p>
+      </article>
+    </div><!-- end dessert -->
+
+    <div class="food" id="cheese">
+      <h2>Cheese</h2>
+      <article>
+      <span class="base">Select Cheese Plate </span><span class="price">18</span>
+      <p>w/ Apple & Pear</p>
+      <p>A Complementary Kona Coffee or Brandy & Benedictine is provided.</p>
+      </article>
+    </div><!-- end cheese -->
+  </div><!-- end stack three -->
+
+</div><!-- end menu -->
+
+</body>
 </html>
